# flip-hash-rs

./: Cargo.toml  README.md
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: perf.rs
benchmarks/results/collisions/: 64_bytes_to_range_to_incl_99
benchmarks/results/independence_across_ranges/: 64_bytes_to_ranges_to_incl_8_17  plots.ipynb
benchmarks/results/independence_across_seeds/: 64_bytes_2_seeds_to_range_to_incl_17  plots.ipynb
benchmarks/results/regularity/: 64_bytes_to_range_to_incl_99  plots.ipynb
benchmarks/src/: acc.rs  algo.rs  exp.rs  lib.rs  main.rs
src/: lib.rs
