[package]
name = "flip_hash_benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Charles Masson <charles@datadog.com>"]

[dependencies]
flip_hash = { version = "0.1.0", path = "..", features = ["xxh3"] }

clap = { version = "4.2.5", features = ["derive"] }
itertools = { version = "0.10.5" }
rand = { version = "0.8.5" , features = ["std_rng"] }
statrs = { version = "0.16.0" }
xxhash-rust = { version = "0.8.6", default-features = false, features = ["const_xxh3", "xxh3"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "perf"
harness = false
